--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--Helloo-->
 
 <body>
-    <div class="container-fluid  ">
+    <div class="container-fluid  position-fixed">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-body-tertiary">
             <a href="/"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
