--- a/index.html
+++ b/index.html
@@ -726,6 +726,20 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapseThree">
+                        View my CV
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        <object data="pdf/CV.pdf" type="" width="100%" height="1000"></object>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Recommendations -->
