--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
     </div>
     <!-- Recommendations -->
     <div class="container" id="recommend-container">
-        <div class="row" >
-            <div class="col-lg-6 col-sm-12">
+        <div class="row">
+            <div class="col-6 col-sm-12">
                 <div class="card rounded-5 text-center m-5 ">
                     <div class="card-header">
                         Recommendation
@@ -843,6 +843,13 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="container mx-auto">
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark"
+            data-type="VERTICAL" data-vanity="sharada-marasinha" data-version="v1"><a
+                class="badge-base__link LI-simple-link"
+                href="https://lk.linkedin.com/in/sharada-marasinha?trk=profile-badge"></a></div>
     </div>
 
 
