--- a/index.html
+++ b/index.html
@@ -845,11 +845,11 @@
 
     </div>
 
-    <div class="container mx-auto">
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark"
+    <div class="container p-3 bg-black">
+        <div class="badge-base LI-profile-badge m-auto" data-locale="en_US" data-size="medium" data-theme="dark"
             data-type="VERTICAL" data-vanity="sharada-marasinha" data-version="v1"><a
                 class="badge-base__link LI-simple-link"
-                href="https://lk.linkedin.com/in/sharada-marasinha?trk=profile-badge"></a></div>
+                href="https://lk.linkedin.com/in/sharada-marasinha?trk=profile-badge">dsfv</a></div>
     </div>
 
 
