--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
     <!-- Recommendations -->
     <div class="container" id="recommend-container">
         <div class="row">
-            <div class="col-6 col-sm-12">
+            <div class="col-lg-6 col-sm-12">
                 <div class="card rounded-5 text-center m-5 ">
                     <div class="card-header">
                         Recommendation
@@ -849,7 +849,7 @@
         <div class="badge-base LI-profile-badge m-auto" data-locale="en_US" data-size="medium" data-theme="dark"
             data-type="VERTICAL" data-vanity="sharada-marasinha" data-version="v1"><a
                 class="badge-base__link LI-simple-link"
-                href="https://lk.linkedin.com/in/sharada-marasinha?trk=profile-badge">dsfv</a></div>
+                href="https://lk.linkedin.com/in/sharada-marasinha?trk=profile-badge"></a></div>
     </div>
 
 
