--- a/index.html
+++ b/index.html
@@ -847,11 +847,18 @@
 
     <div class="container p-3 bg-black">
         <div class="row">
-          
+
+            <div class="col">
                 <div class="badge-base LI-profile-badge d-flex justify-content-center" data-locale="en_US" data-size="medium" data-theme="dark"
                 data-type="VERTICAL" data-vanity="sharada-marasinha" data-version="v1"><a
                     class="badge-base__link LI-simple-link"
                     href="https://lk.linkedin.com/in/sharada-marasinha?trk=profile-badge"></a></div>
+            </div>
+            <div class="col">
+                <a href="https://app.daily.dev/marasinha"><img src="https://api.daily.dev/devcards/v2/M7Z4EqXa1R42eXgWKHadY.png?r=tin&type=wide" width="652" alt="Sharada Marasinha's Dev Card"/></a>
+            </div>
+          
+
   
 
         </div>
