--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="shortcut icon" href="img/icons/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/feture3.jpg" type="image/x-icon">
 
 </head>
 <!--Helloo-->
 
 <body>
-    <div class="container-fluid  position-fixed z-3">
+    <div class="container-fluid navigations  position-fixed z-3">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-body-tertiary">
             <a href="/"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -889,6 +889,7 @@
             </ul>
         </footer>
     </footer>
+    <script src="https://gist.github.com/sharada-marasinha/e27c4a31f7574326639984ded44a1c3c.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
