--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <hgroup>
         <div class="container-fluid p-5">
-            <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+            <div class="row mt-5 p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-5  shadow-lg">
                 <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                     <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Hi, i'm Sharada,</h1>
                     <p class="lead"> I am an experienced full-stack developer with a strong track record in creating
