--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <hgroup>
         <div class="container-fluid p-5">
-            <div class="row mt-5 p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-5  shadow-lg">
-                <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+            <div class="row mt-5 p-4 pb-0 pe-lg-0 align-items-center rounded-5  shadow-lg">
+                <div class="col-lg-7 p-3 p-lg-5">
                     <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Hi, i'm Sharada,</h1>
                     <p class="lead"> I am an experienced full-stack developer with a strong track record in creating
                         responsive web
@@ -47,10 +47,6 @@
                         up-to-date with industry trends make me a valuable asset to any team. I'm excited to contribute
                         my
                         expertise to your organization's success.</p>
-
-
-
-
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                         <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold"><i
                                 class="bi bi-whatsapp"></i></button>
@@ -58,8 +54,8 @@
                                 class="bi bi-envelope"></i></button>
                     </div>
                 </div>
-                <div class="col-lg-4 offset-lg-1   mb-5 text-center">
-                    <img class="rounded-5 shadow img-thumbnail p-4 mt-5" src="img/propic_2.jpg" alt="" width="450">
+                <div class="col-lg-4 offset-lg-1 mb-3 text-center">
+                    <img class="rounded-5 shadow img-thumbnail p-2" src="img/propic_2.jpg" alt="" width="350">
                 </div>
             </div>
         </div>
