--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
 <!--Helloo-->
 
 <body>
-    <div class="container-fluid navigations  position-fixed z-3">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-body-tertiary">
+    <div class="container-fluid navigations bg-nav position-fixed z-3">
+        <header class="d-flex  flex-wrap justify-content-center py-3 mb-4">
             <a href="/"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <svg class="bi me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap" />
-                </svg>
-                <span class="fs-10">Sharada Marasinghe</span>
+                <h5 class="ms-3">Sharada Marasinghe</h5>
             </a>
 
             <ul class="nav nav-pills">
