--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="shortcut icon" href="img/feture3.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icons/fav.png" type="image/x-icon">
 
 </head>
 <!--Helloo-->
@@ -19,10 +19,10 @@
         <header class="d-flex  flex-wrap justify-content-center py-3 mb-4">
             <a href="/"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <h5 class="ms-3">Sharada Marasinghe</h5>
+                <h5 class="ms-3 bg-primary p-3 rounded text-white fw-bolder figure-caption">< ${ Sharada Marasinghe } /></h5>
             </a>
 
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills bg-body-tertiary p-2 rounded">
                 <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="#custom-cards" class="nav-link ">Features</a></li>
                 <li class="nav-item"><a href="#peojects" class="nav-link">Projects</a></li>
