--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--Helloo-->
 
 <body>
-    <div class="container-fluid navigations bg-nav position-fixed z-3">
+    <div class="container-fluid navigations bg-nav position-fixed z-3 ">
         <header class="d-flex  flex-wrap justify-content-center py-3 mb-4">
             <a href="/"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -33,8 +33,8 @@
     </div>
 
     <hgroup>
-        <div class="container-fluid p-5">
-            <div class="row mt-5 p-4 pb-0 pe-lg-0 align-items-center rounded-5  shadow-lg">
+        <div class="container-fluid p-5 ">
+            <div class="row mt-5 p-4 pb-0 pe-lg-0 align-items-center rounded-5  shadow-lg ">
                 <div class="col-lg-7 p-3 p-lg-5">
                     <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Hi, i'm Sharada,</h1>
                     <p class="lead"> I am an experienced full-stack developer with a strong track record in creating
@@ -59,15 +59,15 @@
     </hgroup>
 
     <div class="container  py-5" id="custom-cards">
-        <h2>Featured</h2>
+        <h2 class="bg-primary rounded p-2 fw-bolder text-white text-center">Featured</h2>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="col">
                 <div id="bg_news_img01" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                    style="background-image: url('img/future1.JPG'); background-position: center; background-size: cover;">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                    style="background-image: url('img/future1.JPG');  background-position: center; background-size: cover;">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 bg-dark bg-opacity-50">
                         <h3 id="news_title01" class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Exciting news!
                         </h3>
-                        <p>New batches 108/109/110 for our Internet Technology course!</p>
+                        <p>New batches 108|109|110 for our Internet Technology course!</p>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
                                 <img src="img/iCET LOGO.jpg" alt="Bootstrap" width="32" height="32"
@@ -93,7 +93,7 @@
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                     style="background-image: url('img/future2.jpg'); background-position: center; background-size: cover;">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 bg-black bg-opacity-50">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Celebration!
                         </h3>
                         <p>The First Main Session about Internet technology</p>
@@ -122,7 +122,7 @@
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                     style="background-image: url('img/feture3.jpg'); background-position: center; background-repeat: no-repeat;">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1 bg-black bg-opacity-50">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">VIVA Evaluation</h3>
                         <p>The Stand Alone Application Development Final VIVA Evaluation for Batches 104 | 105</p>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -151,8 +151,9 @@
 
 
     <!-- Core Languages -->
+    <h2 class="container pb-2 border-bottom bg-primary fw-bold text-white text-center p-2 rounded">Core Languages</h2>
     <div class="container-fluid   px-5 py-5" id="icon-grid">
-        <h2 class="pb-2 border-bottom">Core Languages</h2>
+        
         <details class="p-4">
             <dl>
                 <dt>What is a core language?</dt>
