--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="shortcut icon" href="img/icons/fav.png" type="image/x-icon">
 
 </head>
+<!--Helloo-->
+
 <body>
     <div class="container-fluid navigations bg-nav position-fixed z-3 ">
         <header class="d-flex  flex-wrap justify-content-center py-3 mb-4">
@@ -29,6 +31,7 @@
             </ul>
         </header>
     </div>
+
     <hgroup>
         <div class="container-fluid p-5 ">
             <div class="row mt-5 p-4 pb-0 pe-lg-0 align-items-center rounded-5  shadow-lg ">
@@ -56,7 +59,7 @@
     </hgroup>
 
     <div class="container  py-5" id="custom-cards">
-        <h2 class="bg-primary rounded p-2 fw-bolder text-white text-center">Featured</h2>
+        <h2 class="bg-primary rounded p- fw-bolder text-white text-center">Featured</h2>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="col">
                 <div id="bg_news_img01" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
