--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </hgroup>
 
     <div class="container  py-5" id="custom-cards">
-        <h2 class="bg-primary rounded p- fw-bolder text-white text-center">Featured</h2>
+        <h2 class="bg-primary rounded p-3 fw-bolder text-white text-center">Featured</h2>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="col">
                 <div id="bg_news_img01" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
@@ -151,9 +151,8 @@
 
 
     <!-- Core Languages -->
-    <h2 class="container pb-2 border-bottom bg-primary fw-bold text-white text-center p-2 rounded">Core Languages</h2>
     <div class="container-fluid   px-5 py-5" id="icon-grid">
-        
+        <h2 class="pb-2 border-bottom">Core Languages</h2>
         <details class="p-4">
             <dl>
                 <dt>What is a core language?</dt>
